[gd_scene load_steps=6 format=3 uid="uid://bbll7jmokqctq"]

[ext_resource type="Script" uid="uid://c1fypfhhm5fbc" path="res://scenes/settings/settings.gd" id="1_tt6xx"]
[ext_resource type="FontFile" uid="uid://ddcrrdlx8quwu" path="res://fonts/Inter/static/Inter_18pt-Bold.ttf" id="1_vu5fi"]
[ext_resource type="PackedScene" uid="uid://beirmn27iqsot" path="res://scenes/settings/option_input.tscn" id="2_vu5fi"]
[ext_resource type="PackedScene" uid="uid://1tqephidmgke" path="res://scenes/settings/option_check.tscn" id="4_1slea"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36l1p"]
bg_color = Color(0.0214346, 0.0214346, 0.0214346, 1)

[node name="Settings" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt6xx")

[node name="Window" type="Window" parent="."]
title = "Settings"
initial_position = 4
size = Vector2i(700, 400)

[node name="PanelContainer" type="PanelContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_36l1p")

[node name="TabContainer" type="TabContainer" parent="Window/PanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vu5fi")
current_tab = 0
tab_focus_mode = 0

[node name="Spotify" type="VBoxContainer" parent="Window/PanelContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ClientID" parent="Window/PanelContainer/TabContainer/Spotify" instance=ExtResource("2_vu5fi")]
layout_mode = 2
is_secret = true
setting_name = "spotify_client_id"

[node name="OptionText" parent="Window/PanelContainer/TabContainer/Spotify/ClientID" index="0"]
text = "Client ID:"

[node name="ClientSecret" parent="Window/PanelContainer/TabContainer/Spotify" instance=ExtResource("2_vu5fi")]
layout_mode = 2
is_secret = true
setting_name = "spotify_client_secret"

[node name="OptionText" parent="Window/PanelContainer/TabContainer/Spotify/ClientSecret" index="0"]
text = "Client Secret:"

[node name="Port" parent="Window/PanelContainer/TabContainer/Spotify" instance=ExtResource("2_vu5fi")]
layout_mode = 2
setting_name = "spotify_port"

[node name="OptionText" parent="Window/PanelContainer/TabContainer/Spotify/Port" index="0"]
text = "Port:"

[node name="LineEdit" parent="Window/PanelContainer/TabContainer/Spotify/Port" index="1"]
custom_minimum_size = Vector2(50, 0)

[node name="Sound" type="VBoxContainer" parent="Window/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="InGameVolume" parent="Window/PanelContainer/TabContainer/Sound" instance=ExtResource("2_vu5fi")]
layout_mode = 2
int_only_input = true
max_value = 100
setting_name = "in_game_volume"

[node name="OptionText" parent="Window/PanelContainer/TabContainer/Sound/InGameVolume" index="0"]
text = "In-game volume:"

[node name="LineEdit" parent="Window/PanelContainer/TabContainer/Sound/InGameVolume" index="1"]
custom_minimum_size = Vector2(35, 0)

[node name="PauseVolume" parent="Window/PanelContainer/TabContainer/Sound" instance=ExtResource("2_vu5fi")]
layout_mode = 2
int_only_input = true
max_value = 100
setting_name = "pause_volume"

[node name="OptionText" parent="Window/PanelContainer/TabContainer/Sound/PauseVolume" index="0"]
text = "Pause volume:"

[node name="LineEdit" parent="Window/PanelContainer/TabContainer/Sound/PauseVolume" index="1"]
custom_minimum_size = Vector2(35, 0)

[node name="Controls" type="VBoxContainer" parent="Window/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="PreviousSongControl" parent="Window/PanelContainer/TabContainer/Controls" instance=ExtResource("4_1slea")]
layout_mode = 2
setting_name = "previous_song_control_enabled"

[node name="OptionText" parent="Window/PanelContainer/TabContainer/Controls/PreviousSongControl" index="0"]
text = "Use left stick press (L3) to play previous song:"

[node name="Themes" type="VBoxContainer" parent="Window/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]

[editable path="Window/PanelContainer/TabContainer/Spotify/ClientID"]
[editable path="Window/PanelContainer/TabContainer/Spotify/ClientSecret"]
[editable path="Window/PanelContainer/TabContainer/Spotify/Port"]
[editable path="Window/PanelContainer/TabContainer/Sound/InGameVolume"]
[editable path="Window/PanelContainer/TabContainer/Sound/PauseVolume"]
[editable path="Window/PanelContainer/TabContainer/Controls/PreviousSongControl"]
